<resources>
    <string name="app_name">WeatherMaster</string>
    <string name="my_city">My City</string>
    <string name="settings">Settings</string>
    <string name="detail">Detail information</string>
    <string name="cities">List of Cities</string>
    <string name="search">City Search</string>
    <string name="measurement">Units of measurement:</string>
    <string name="temperature_Fahrenheit">temperature in Fahrenheit</string>
    <string name="temperature_Celsius">temperature in Celsius</string>
    <string name="temperature_Kelvin">temperature in Kelvin</string>
    <string name="settings_is_saved">Settings Saved</string>
    <string name="empty_search">No results found for your search</string>
    <string name="city_already">This city is already listed</string>
    <string name="text_no_internet">There Is No Internet. It Needs a Connection to Work.</string>
    <string name="text_need_internet">There Is No Internet Connection. Check The appropriate Settings And Try Again.</string>
    <string name="no_servise_connect">There Was a Problem Connecting To the Service. Please Try again Later.</string>
    <string name="need_permission">To display weather information for your location, you must grant the appropriate permission.</string>
    <string name="foreground">Foreground Service</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>