<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.weathermaster.utils.KeyConstants" />
        <import type="android.view.View" />

        <variable
            name="measurement1"
            type="Boolean" />
        <variable
            name="measurement2"
            type="Boolean" />
        <variable
            name="measurement3"
            type="Boolean" />
        <variable
            name="isEdited"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".ui.settings.SettingsFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title_top"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="@+id/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_image_horisontal"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_image_horisontal"
            android:src="@drawable/save"
            app:visibility="@{isEdited ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_image_horisontal"
            android:layout_marginTop="@dimen/margin_title_top"
            android:layout_marginEnd="@dimen/margin_image_horisontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measurement"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_size"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_title_top"
                android:text="@{KeyConstants.MEASUREMENT1}"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_size" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_comment_top"
                android:checked="@{measurement1}"
                android:text="@string/temperature_Fahrenheit"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_comment_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_settings_vertical"
                android:text="@{KeyConstants.MEASUREMENT2}"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_size" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_comment_top"
                android:checked="@{measurement2}"
                android:text="@string/temperature_Celsius"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_comment_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_settings_vertical"
                android:text="@{KeyConstants.MEASUREMENT3}"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_size" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_comment_top"
                android:checked="@{measurement3}"
                android:text="@string/temperature_Kelvin"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_comment_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_title_top"
                android:background="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>